--- a/sass/components/_action_button.scss
+++ b/sass/components/_action_button.scss
@@ -4,6 +4,7 @@
     margin: 20px;
     border: none;
     border-radius: 25px;
+    box-shadow: 0px 4px 10px 0px #00000040;
     font-weight: 500;
     font-size: 16px;
     background: linear-gradient($secondary-color,$primary-color);
