--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -24,14 +24,38 @@
     }
 }  
 
+.presentation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px 0 40px 0;
+
+    .presentation__title {
+        height: 68px;
+        width: 73%;
+        margin-bottom: 0;
+        font-weight: 700;
+        font-size: 24px;
+    }
+
+    p {
+        font-weight: 300;
+        font-size: 18px;
+        margin-top: 0;
+        margin-bottom: 10px;
+    }
+}
+
 .fonctionnement{
-    padding: 20px;
+    padding: 20px 20px 35px 20px;
     background-color: white;
     .fonctionnement_list {
         margin-left: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 26px;
 
         li {
             position: relative;
@@ -77,29 +101,8 @@
     }
 }
 
-.presentation {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 20px 0;
-
-    .presentation__title {
-        height: 68px;
-        width: 73%;
-        margin-bottom: 0;
-        font-weight: 700;
-        font-size: 24px;
-    }
-
-    p {
-        font-weight: 300;
-        font-size: 18px;
-    }
-}
-
 .restaurants {
-    padding: 20px 20px 0 20px;
+    padding: 35px 20px 50px 20px;
 }
 
 /****** Media queries ***********/
@@ -157,6 +160,8 @@
     .fonctionnement {
         display: flex;
         justify-content: center;
+        padding-top: 30px;
+        padding-bottom: 15px;
         div {
             max-width: 1053px;
             width: 100%;
@@ -172,6 +177,7 @@
     }
 
     .presentation {
+        padding: 30px 0 10px 0;
                     
         br {
             display: none;
@@ -186,6 +192,7 @@
         }
 
         p {
+            margin-top: 18px;
             margin-bottom: 10px;
         }
     }
