--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,5 +1,5 @@
-
 .menu {
+    padding-bottom: 40px;
 
     .menu__page__image {
         height: 275px;
@@ -35,7 +35,7 @@
         flex-direction: column;
         padding: 0 13px;
         background-color: #F6F6F6;
-        gap: 40px;
+        gap: 30px;
         
         > * { 
             opacity: 0;
@@ -166,6 +166,7 @@
         .command_action {
             display: flex;
             justify-content: center;
+            padding-top: 10px;
 
             .action_button {
                 margin: 0;
@@ -196,7 +197,7 @@
 }
 
 @media screen and (min-width: 690px) and (max-width: 1023px) {
-    .menu {
+    .menu {        
         .menu__body {
             section {
                 align-items: center;
@@ -233,6 +234,7 @@
         flex-direction: column;
         align-items: center;
         background-color: white;
+        padding-bottom: 0;
 
         .menu__page__image {
                 object-fit: cover;
