--- a/sass/components/_like_icon.scss
+++ b/sass/components/_like_icon.scss
@@ -3,6 +3,7 @@
     background: none;
     border: none;
     padding: 0;
+    padding-top: 15px;
     font: inherit;
     cursor: pointer;
     outline: inherit;
